# sx

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: actions.rs  cli.rs  config.rs  doctor.rs  main.rs  root.rs  search.rs
src/db/: mod.rs
src/index/: mod.rs  scan.rs
src/index/chunk/: mod.rs  treesitter.rs
src/lsp/: mod.rs
src/lsp/go/: mod.rs
src/semantic/: deep.rs  embedder.rs  hybrid.rs  llm.rs  mod.rs  store.rs  vector_index.rs
src/trace/: edge_provider.rs  extract.rs  graph.rs  mod.rs  rank.rs  summarize.rs  types.rs
src/tui/: mod.rs
tests/: cli_integration.rs  embedding_integration.rs  trace.rs
